# firecore-pokedex-lib

./: Cargo.toml
src/: lib.rs  moves.rs
src/moves/: saved.rs
src/pokemon/: instance.rs  mod.rs  party.rs  saved.rs
src/pokemon/data/: mod.rs  training.rs
