[package]
name = "firecore-pokedex-lib"
version = "0.3.0-beta.1"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

### Serialization

serde = { version = "1.0", features = ["derive"] }

### Collections

smallvec = { version = "1.6", features = ["serde"] }